--- a/package.json
+++ b/package.json
@@ -34,5 +34,9 @@
     "rollup-plugin-terser": "^5.1.0",
     "rollup-plugin-typescript2": "^0.21.2",
     "typescript": "^3.5.2"
-  }
+  },
+  "files": [
+    "{esm,cjs,umd}/index.js",
+    "esm/index.d.ts"
+  ]
 }
