--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "module": "./esm/index.js",
   "types": "./esm/index.d.ts",
   "scripts": {
-    "build": "rollup -c",
+    "build": "rollup --silent -c",
     "prepack": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -24,16 +24,16 @@
   },
   "homepage": "https://github.com/ghnacker/semver-min#readme",
   "dependencies": {
-    "@types/semver": "^7.1.0",
+    "@types/semver": "^7.3.1",
     "semver": "^7.3.2"
   },
   "devDependencies": {
-    "rollup": "^2.7.6",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-terser": "^5.3.0",
-    "rollup-plugin-typescript2": "^0.27.0",
-    "typescript": "^3.8.3"
+    "@rollup/plugin-commonjs": "^14.0.0",
+    "@rollup/plugin-node-resolve": "^8.4.0",
+    "rollup": "^2.23.0",
+    "rollup-plugin-terser": "^6.1.0",
+    "rollup-plugin-ts": "^1.3.0",
+    "typescript": "^3.9.7"
   },
   "files": [
     "{esm,cjs,umd}/index.js",
