--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^15.1.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
-    "rollup": "^2.28.2",
+    "@wessberg/rollup-plugin-ts": "^1.3.5",
+    "rollup": "^2.32.1",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-ts": "^1.3.0",
     "typescript": "^4.0.3"
   },
   "files": [
