--- a/package.json
+++ b/package.json
@@ -24,16 +24,16 @@
   },
   "homepage": "https://github.com/ghnacker/semver-min#readme",
   "dependencies": {
-    "@types/semver": "^7.3.4",
-    "semver": "^7.3.2"
+    "@types/semver": "^7.3.4"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^15.1.0",
-    "@rollup/plugin-node-resolve": "^9.0.0",
-    "@wessberg/rollup-plugin-ts": "^1.3.5",
-    "rollup": "^2.32.1",
+    "@rollup/plugin-commonjs": "^16.0.0",
+    "@rollup/plugin-node-resolve": "^10.0.0",
+    "@wessberg/rollup-plugin-ts": "^1.3.7",
+    "rollup": "^2.33.1",
     "rollup-plugin-terser": "^7.0.2",
-    "typescript": "^4.0.3"
+    "semver": "^7.3.2",
+    "typescript": "^4.0.5"
   },
   "files": [
     "{esm,cjs,umd}/index.js",
